# bat-game-bevy

./: .gitignore  CREDITS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: asset_distribution_note.md
docs/: NOTES.md
src/: animation.rs  audio.rs  background.rs  camera.rs  constants.rs  game.rs  game_over.rs  input.rs  input_translation.rs  main.rs  pause_menu.rs  physics.rs  player.rs  ui.rs
