[package]
name = "bat-game-bevy"
version = "0.1.0"
edition = "2021"
description = "Bat Game written with the bevy game engine"
repository = "https://github.com/Squidroot2/bat-game-bevy"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
codegen-units = 1

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.15.0"
